# wglib

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  SCHOLARSHIP.md  shell.html
.github/workflows/: main.yml
scripts/: build_web.sh
src/: main.cpp
src/lib/: CoreEngine.cpp  CoreEngine.hpp  CoreRenderer.cpp  CoreRenderer.hpp  CoreUtil.hpp  WindowManager.cpp  WindowManager.hpp  engine.cpp  engine.hpp  renderer.cpp  renderer.hpp  util.hpp  window_manager.cpp  window_manager.hpp
src/lib/compute/: ComputeEngine.cpp  ComputeEngine.hpp  ComputeLayer.hpp
src/lib/compute/ExampleLayers/: ConwaysGameOfLife.cpp  ConwaysGameOfLife.hpp  ExampleLayer.cpp  ExampleLayer.hpp  ParticleSimulation.cpp  ParticleSimulation.hpp
src/lib/render_layer/: CircleRenderLayer.cpp  CircleRenderLayer.hpp  RectangleRenderLayer.cpp  RectangleRenderLayer.hpp  RenderLayer.cpp  RenderLayer.hpp  TextureRenderLayer.cpp  TextureRenderLayer.hpp  TriangleRenderLayer.cpp  TriangleRenderLayer.hpp  Vertex.hpp  rectangle_render_layer.cpp  rectangle_render_layer.hpp  render_layer.cpp  render_layer.hpp
src/shaders/: default.wgsl  example.wgsl  texture.wgsl  triangle.wgsl
src/shaders/ConwaysGameOfLife/: compute.wgsl
src/shaders/ParticleSimulation/: particle.wgsl
